# gpr-200-fa2024-benton-lane

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment1_helloTriangle/assets/: fragmentShader.frag
assignments/assignment_2/: main.cpp
assignments/assignment_2/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment_2/assets/shaders/: backgroundShader.frag  characterShader.frag  characterShader.vert
assignments/assignment_4/: main.cpp
assignments/assignment_4/assets/: vertexShader.vert
assignments/assignment_4/assets/shaders/: backgroundShader.frag
assignments/assignment_5/: CMakeLists.txt  main.cpp
assignments/assignment_5/assets/models/: chair.fbx  firepit.fbx  grass.fbx  grass2.fbx  logs.fbx
assignments/assignment_5/assets/models/chair/: chair.mtl
assignments/assignment_5/assets/models/firepit/: firepit.fbx  pit.mtl
assignments/assignment_5/assets/models/logs/: logs.mtl
assignments/assignment_5/assets/shaders/: basicLighting.frag  basicLighting.vert  fireShader.frag  fireShader.vert  groundPlane.frag  groundPlane.vert  instancedGrass.frag  instancedGrass.vert  modelTest.frag  modelTest.vert  skyboxTest.frag  skyboxTest.vert  treeShader.frag  treeShader.vert
core/: CMakeLists.txt
core/bl_library/: camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
